--- a/src/style/style_models.css
+++ b/src/style/style_models.css
@@ -3,47 +3,47 @@
 /*tech_spec*/
 /*auto_park*/
 
-/*#Canvas_wrapper {*/
-/*    background-color: yellow;*/
-/*    width: 100%;*/
-/*    height: 100%;*/
-/*}*/
+#Canvas_wrapper {
+    background-color: yellow;
+    width: 100%;
+    height: 100%;
+}
 
-/*.Mytext {*/
-/*    display: none;*/
-/*    max-width: 280px;*/
-/*    !*width: 100%;*!*/
-/*    height: auto;*/
-/*}*/
+.Mytext {
+    display: none;
+    max-width: 280px;
+    /*width: 100%;*/
+    height: auto;
+}
 
-/*.tooltip_wrapper {*/
-/*    display: flex;*/
-/*    background: rgba(9, 9, 9, 0.50);*/
-/*    backdrop-filter: blur(6px);*/
-/*    -webkit-backdrop-filter: blur(6px);*/
-/*    border-radius: 16px;*/
-/*    padding: 20px;*/
-/*    gap: 16px;*/
-/*}*/
+.tooltip_wrapper {
+    display: flex;
+    background: rgba(9, 9, 9, 0.50);
+    backdrop-filter: blur(6px);
+    -webkit-backdrop-filter: blur(6px);
+    border-radius: 16px;
+    padding: 20px;
+    gap: 16px;
+}
 
-/*.tooltip {*/
-/*    font-family: 'MoscowSans', sans-serif;*/
-/*    font-size: 18px;*/
-/*    font-weight: 300;*/
-/*    color: white;*/
-/*}*/
+.tooltip {
+    font-family: 'MoscowSans', sans-serif;
+    font-size: 18px;
+    font-weight: 300;
+    color: white;
+}
 
-/*.tooltip_wrapper svg {*/
-/*    min-width: min-content;*/
-/*}*/
+.tooltip_wrapper svg {
+    min-width: min-content;
+}
 
-/*.Mytext.show {*/
-/*    display: block;*/
-/*}*/
+.Mytext.show {
+    display: block;
+}
 
-/*.Mytext.hide {*/
-/*    display: none;*/
-/*}*/
+.Mytext.hide {
+    display: none;
+}
 
 
 html.a-fullscreen {
