--- a/src/style/media_models.css
+++ b/src/style/media_models.css
@@ -143,25 +143,25 @@
     }
 }
 
-@media (max-width: 945px) {
-    .auto_park_slider-button button.prev_button {
-        left: -16px;
-    }
+/*@media (max-width: 945px) {*/
+/*    .auto_park_slider-button button.prev_button {*/
+/*        left: -16px;*/
+/*    }*/
 
-    .auto_park_slider-button button.next_button {
-        right: -16px;
-    }
-}
+/*    .auto_park_slider-button button.next_button {*/
+/*        right: -16px;*/
+/*    }*/
+/*}*/
 
-@media (max-width: 734px) {
-    .auto_park_slider-button button.prev_button {
-        left: -26px;
-    }
+/*@media (max-width: 734px) {*/
+/*    .auto_park_slider-button button.prev_button {*/
+/*        left: -26px;*/
+/*    }*/
 
-    .auto_park_slider-button button.next_button {
-        right: -26px;
-    }
-}
+/*    .auto_park_slider-button button.next_button {*/
+/*        right: -26px;*/
+/*    }*/
+/*}*/
 
 @media (max-width: 835px) {
     .container {
