--- a/src/style/style_models.css
+++ b/src/style/style_models.css
@@ -42,17 +42,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    /*right: 18px;*/
-    /*top: 18px;*/
     right: 20px;
-    top: 19px;
+    top: 20px;
     z-index: 1;
     background-color: black;
-    /*width: 74px;*/
-    /*height: 38px;*/
     width: 68px;
-    height: 34px;
-    border-radius: 8px;
+    height: 32px;
+    border-radius: 4px;
     border: 1px solid white;
     pointer-events: none;
 }
@@ -66,20 +62,23 @@
     animation: none;
 }
 
+.pulse_media {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.pulse_media .pulse_img:first-child {
+    margin-right: 4px;
+}
+
 .pulse {
-    position: relative;
+    position: absolute;
     text-align: center;
     border-radius: 8px;
     background-color: white;
-    /*top: 50%;*/
-    /*right: 50%;*/
-    /*right: 20px;*/
-    /*top: 19px;*/
-    /*transform: translate(-50%, -50%);*/
     width: 88px;
     height: 42px;
-    /*width: 68px;*/
-    /*height: 34px;*/
     animation: move 1.5s linear infinite;
 }
 
@@ -358,66 +357,114 @@ a-scene {
 
 /*магия уголков начата*/
 
-.tech_spec__mission-panel,
-.tech_spec__outfit-panel {
-    display: inline-block;
-    width: 100%;
-    position: relative;
-    border: 1px solid #787878;
-    transition: all .3s ease;
-}
+/*.tech_spec__mission-panel,*/
+/*.tech_spec__outfit-panel {*/
+/*    display: inline-block;*/
+/*    width: 100%;*/
+/*    position: relative;*/
+/*    border: 1px solid #787878;*/
+/*    transition: all .3s ease;*/
+/*}*/
 
-.tech_spec__mission-panel-background,
-.tech_spec__outfit-panel-background {
-    position: absolute;
-    width: 101%;
-    height: 108%;
-    top: -1px;
-    left: -1px;
-    background: rgba(255, 255, 255, 0.10);
-    z-index: 1;
-}
+/*.tech_spec__mission-panel-background,*/
+/*.tech_spec__outfit-panel-background {*/
+/*    position: absolute;*/
+/*    width: 101%;*/
+/*    height: 108%;*/
+/*    top: -1px;*/
+/*    left: -1px;*/
+/*    background: rgba(255, 255, 255, 0.10);*/
+/*    z-index: 1;*/
+/*}*/
 
-.tech_spec__mission-panel .tech_spec__text,
-.tech_spec__outfit-panel .tech_spec__text {
-    position: relative;
-    z-index: 2;
-}
+/*.tech_spec__mission-panel .tech_spec__text,*/
+/*.tech_spec__outfit-panel .tech_spec__text {*/
+/*    position: relative;*/
+/*    z-index: 2;*/
+/*}*/
 
-.tech_spec__mission-panel:before,
-.tech_spec__mission-panel:after,
-.tech_spec__outfit-panel:before,
-.tech_spec__outfit-panel:after {
-    content: "";
-    z-index: -1;
-    display: block;
-    position: absolute;
-    background: #000;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    animation-iteration-count: 1;
-    transform-origin: 50% 50%;
-}
+/*.tech_spec__mission-panel:before,*/
+/*.tech_spec__mission-panel:after,*/
+/*.tech_spec__outfit-panel:before,*/
+/*.tech_spec__outfit-panel:after {*/
+/*    content: "";*/
+/*    z-index: -1;*/
+/*    display: block;*/
+/*    position: absolute;*/
+/*    background: #000;*/
+/*    top: 50%;*/
+/*    left: 50%;*/
+/*    transform: translate(-50%, -50%);*/
+/*    animation-iteration-count: 1;*/
+/*    transform-origin: 50% 50%;*/
+/*}*/
 
-.tech_spec__mission-panel:before,
-.tech_spec__outfit-panel:before {
-    width: calc(100% + 6px);
-    height: 68%;
-    z-index: 1;
-    transition: height 0.6s;
-}
+/*.tech_spec__mission-panel:before,*/
+/*.tech_spec__outfit-panel:before {*/
+/*    width: calc(100% + 6px);*/
+/*    height: 68%;*/
+/*    z-index: 1;*/
+/*    transition: height 0.6s;*/
+/*}*/
 
 
-.tech_spec__mission-panel:after,
-.tech_spec__outfit-panel:after {
-    height: calc(100% + 5px);
-    width: 96%;
-    z-index: 0;
-    transition: width 0.7s;
-}
+/*.tech_spec__mission-panel:after,*/
+/*.tech_spec__outfit-panel:after {*/
+/*    height: calc(100% + 5px);*/
+/*    width: 96%;*/
+/*    z-index: 0;*/
+/*    transition: width 0.7s;*/
+/*}*/
 
 /*магия уголков закончена*/
+
+
+
+.tech_spec__mission-panel,
+.tech_spec__outfit-panel {
+    position: relative;
+    background: rgba(255, 255, 255, 0.10);
+}
+
+.tech_spec__mission-panel img.corner,
+.tech_spec__outfit-panel img.corner {
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    top: 0;
+    left: 0;
+}
+
+.tech_spec__mission-panel img.corner-2,
+.tech_spec__outfit-panel img.corner-2 {
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    top: 0;
+    right: 0;
+    transform: rotate(90deg);
+}
+
+.tech_spec__mission-panel img.corner-3,
+.tech_spec__outfit-panel img.corner-3 {
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    bottom: 0;
+    left: 0;
+    transform: rotate(270deg);
+}
+
+.tech_spec__mission-panel img.corner-4,
+.tech_spec__outfit-panel img.corner-4 {
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    bottom: 0;
+    right: 0;
+    transform: rotate(180deg);
+}
+
 
 
 /*tech_spec*/
@@ -881,8 +928,10 @@ a-scene {
     width: 100%;
     /*padding: 19px;*/
     /*max-width: 850px;*/
-    padding: 19px 31px;
-    max-width: 882px;
+    /*padding: 19px 31px;*/
+    /*max-width: 882px;*/
+    padding: 19px 47px;
+    max-width: 902px;
     pointer-events: all;
 }
 
@@ -986,12 +1035,14 @@ a-scene {
 .auto_park_slider-button button.prev_button {
     position: absolute;
     /*left: 0;*/
-    left: -26px;
+    /*left: -26px;*/
+    left: -36px;
 }
 
 .auto_park_slider-button button.next_button {
     transform: rotate(180deg);
     position: absolute;
     /*right: 0;*/
-    right: -26px;
+    /*right: -26px;*/
+    right: -36px;
 }
