--- a/src/style/actions/ARphoto.css
+++ b/src/style/actions/ARphoto.css
@@ -20,7 +20,6 @@
 .competition .competition_wrapper .competition_info {
     grid-area: competition_info;
     padding: 60px 0 150px 60px;
-    max-width: 645px;
 }
 
 .competition .competition_wrapper .competition_media { 
@@ -32,6 +31,11 @@
     bottom: 0;
     right: 0;
     z-index: -1;
+}
+
+.competition .competition_info .competition_title,
+.competition .competition_info .competition_descr {
+    max-width: 645px;
 }
 
 .competition .competition_info .competition_title {
@@ -190,24 +194,21 @@
     align-items: center;
     justify-content: center;
     position: relative;
-    width: 62px;
-    height: 62px;
+    width: 80px;
+    height: 80px;
     border: 1px solid white;
     border-radius: 10px;
     margin-right: 20px;
-    font-family: 'MoscowSans', sans-serif;
-    font-size: 1.6rem;
     cursor: pointer;
 }
 
 .contact-form__file-button .close {
   position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 32px;
+  height: 32px;
   cursor: pointer;
   transition: all .8s ease;
 }
@@ -220,7 +221,7 @@
   transform: rotate(45deg);
 }
 
-.contact-form__file-button .close:before {
+/* .contact-form__file-button .close:before {
   content: "";
   position: absolute;
   top: 50%;
@@ -252,16 +253,14 @@
 .contact-form__file-button .close:after {
   webkit-transform: rotate(90deg) translate(-50%, -50%);
   transform: rotate(90deg) translate(-50%, -50%);
-}
+} */
 
 .preview_photo {
-    width: 62px;
-    height: 62px;
-    border: 1px solid white;
+    position: relative;
+    width: 80px;
+    height: 80px;
+    /* border: 1px solid white; */
     border-radius: 10px;
-}
-
-.preview_photo {
     margin-right: 10px;
 }
 
@@ -274,10 +273,27 @@
     } */
 
 .contact-form__input_preview {
-    width: 60px;
-    height: 60px;
+    width: 80px;
+    height: 80px;
     border-radius: inherit;
     object-fit: cover;
+}
+
+.contact-form__input_delete {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    z-index: 1;
+    cursor: pointer;
+}
+
+.contact-form__input_gradient {
+    position: absolute;
+    width: 100%;
+    height: 30px;
+    border-radius: 10px 10px 0 0;
+    top: 0;
+    background: linear-gradient(180deg, #090909 0%, rgba(9, 9, 9, 0.00) 100%);
 }
 
 .contact-form_file_info .contact-form_file_text {
@@ -343,8 +359,9 @@
     transform: translate(-50%, -50%) scale(0);
     width: 22px;
     height: 22px;
-    border-radius: 2px;
-    background-color: white;
+    /* border-radius: 2px;
+    background-color: white; */
+    background: url('../../img/layout/pages/main/competition/check.svg') no-repeat center/cover;
     transition: all .2s ease-in;
 }
 
@@ -371,13 +388,19 @@
     color: black;
     transition: 0.3s;
     cursor: pointer;
+
+    width: max-content;
 }
 
 .contact-form__button:hover {
     transition: 0.3s;
-    background: #7156f3;
-    color: #fff;
+    /* background: #7156f3;
+    color: #fff; */
     box-shadow: 0 5px 25px rgba(0, 0, 0, 0.3);
+}
+
+.contact-form__button .contact-form__button-img{
+    margin-right: 8px;
 }
 
 .preloader {
@@ -477,8 +500,65 @@
 }
 
 @media (max-width: 768px) {
+    .competition .competition_wrapper {
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(2, 1fr);
+        gap: 0;
+        grid-template-areas:
+            "competition_info"
+            "competition_media";
+    }
+
+    .competition .competition_wrapper .competition_info  {
+        padding: 50px 50px 5px 50px;
+    }
+
+    .competition .competition_info .competition_title,
+    .competition .competition_info .competition_descr {
+        max-width: 475px;
+    }
+
+    .competition .competition_info .competition_descr {
+        font-size: 1.6rem;
+        line-height: 24px;
+    }
+
+    .competition .competition_merch-img {
+        top: unset;
+        right: unset;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 100%;
+    }
+
     .form-wrapper {
         padding: 15px;
+    }
+}
+
+@media (max-width: 560px) {
+    .competition .competition_wrapper .competition_info  {
+        padding: 30px 30px 5px 30px;
+    }
+
+    .competition .competition_info .competition_title {
+        font-size: 4rem;
+        line-height: 40px;
+    }
+}
+
+@media (max-width: 380px) {
+    .competition .competition_info .competition_title {
+        font-size: 3rem;
+        line-height: 30px;
+    }
+
+    .competition .competition_info .competition_descr {
+        line-height: 22px;
+    }
+
+    .competition .form_open_button .form_open_btn {
+        font-size: 1.8rem;
     }
 }
 
